[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Stage" parent="." instance=ExtResource( 2 )]

[node name="MainMenu" parent="." instance=ExtResource( 3 )]
[connection signal="stage_pause" from="Stage" to="." method="_on_Stage_stage_pause"]
[connection signal="exit_game" from="MainMenu" to="." method="_on_MainMenu_exit_game"]
[connection signal="new_game" from="MainMenu" to="." method="_on_MainMenu_new_game"]
[connection signal="start_game" from="MainMenu" to="." method="_on_MainMenu_start_game"]
